# embedded_cli_tools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
Test_Project/: Test.ioc
docs/: TEST_SPEC.md
docs/superpowers/specs/: 2026-05-14-embedded-cli-tools-design.md
skill/: embedded-dev.md
skills/keil-dev/: SKILL.md
skills/keil-dev/references/: commands.md  debug.md  editing.md  install.md
src/: config.rs  main.rs
src/debug/: keil_debug.rs  mod.rs  openocd.rs
src/ioc/: editor.rs  generator.rs  mod.rs  parser.rs
src/keil/: builder.rs  editor.rs  locate.rs  map.rs  mod.rs  parser.rs
src/output/: ai.rs  human.rs  json.rs  mod.rs
src/serial/: daemon.rs  mod.rs  port.rs  protocol.rs
tests/: run_tests.sh
