[package]
name = "embedded_cli_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
roxmltree = "0.20"
xmltree = "0.11"
serialport = "4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
comfy-table = "7"
